// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadPresets array form 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      undefined,
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets array form composite 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [
    [
      "@ianaio/theme-live-codeblock",
      undefined,
    ],
    [
      "@ianaio/theme-algolia",
      {
        "trackingID": "foo",
      },
    ],
  ],
}
`;

exports[`loadPresets array form with options 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets mixed form 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [
    [
      "@ianaio/theme-live-codeblock",
      undefined,
    ],
    [
      "@ianaio/theme-algolia",
      undefined,
    ],
  ],
}
`;

exports[`loadPresets mixed form with themes 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
    [
      "@ianaio/plugin-test",
      undefined,
    ],
    false,
  ],
  "themes": [
    [
      "@ianaio/theme-live-codeblock",
      undefined,
    ],
    [
      "@ianaio/theme-algolia",
      undefined,
    ],
    [
      "@ianaio/theme-classic",
      undefined,
    ],
    null,
  ],
}
`;

exports[`loadPresets string form 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      undefined,
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets string form composite 1`] = `
{
  "plugins": [
    [
      "@ianaio/plugin-content-docs",
      undefined,
    ],
    [
      "@ianaio/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [
    [
      "@ianaio/theme-live-codeblock",
      undefined,
    ],
    [
      "@ianaio/theme-algolia",
      undefined,
    ],
  ],
}
`;
